--- a/css/main.css
+++ b/css/main.css
@@ -7702,26 +7702,26 @@ header.guatemala {
     .sejour .title-section {
       min-height: 200px; }
       .sejour .title-section h2 {
-        margin-top: 80px; }
+        margin-top: 100px; }
       .sejour .title-section h6 {
         margin-top: -100px; } }
 
 .presentation-sejour {
-  min-height: 400px;
-  background-color: rgba(185, 202, 219, 0.516); }
+  min-height: 300px;
+  background-color: rgba(185, 202, 219, 0.516);
+  margin: 20px auto; }
   .presentation-sejour .title-section {
-    margin-top: 40px;
-    padding: 40px auto; }
+    margin-top: 60px;
+    padding: 0 auto; }
   .presentation-sejour h2 {
-    margin: 10px auto 20px auto;
+    margin: 10px auto 10px auto;
     padding: 40px 0; }
   .presentation-sejour p {
     display: flex;
     width: 70%;
     text-align: center;
     justify-content: center;
-    margin: 40px auto;
-    padding: 30px 0; }
+    margin: 0 auto; }
 
 .card-block .btn-orange {
   display: inline-block;
